# river

./: README.md  main.py  pyproject.toml
.github/workflows/: test.yml
river/: __init__.py
river/components/: data_reader.py
river/lib/: component.py  module.py  pipeline.py
river/lib/data/: __init__.py  datas.py
river/lib/errors/: __init__.py
river/lib/helper/: modes.py
river/lib/pipes/: __init__.py  buffer.py  inputs.py  node.py  outputs.py
tests/: test_project.py
tests/assets/: processed_numbers.json
