[tool.poetry]
name = "river"
version = "0.0.0"
description = "A library to create data processing pipelines."
authors = ["Anatole-DC <adechauveron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
